# lingyi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  justfile
.github/workflows/: ci.yml
apps/web/: package-lock.json
apps/web/e2e/: board-interactive.spec.mjs
apps/web/public/wasm/: lingyi_core.d.ts  lingyi_core.js
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/lib/: ai-training.ts  classic-games.json  notation.ts  opening-book.ts  sound.ts  types.ts  wasm.ts
apps/web/wasm/: lingyi_core.d.ts  lingyi_core.js
crates/lingyi-agent/: Cargo.toml
crates/lingyi-agent/src/: api.rs  lib.rs  main.rs  prompt.rs
crates/lingyi-core/: Cargo.toml
crates/lingyi-core/src/: board.rs  game.rs  lib.rs  moves.rs  piece.rs  search.rs  wasm.rs
crates/lingyi-protocol/: Cargo.toml
crates/lingyi-protocol/src/: examples.rs  lib.rs  types.rs
scripts/: pre-commit.sh
