[package]
name = "lingyi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
lingyi-protocol = { path = "../lingyi-protocol" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"

[[bin]]
name = "lingyi-agent"
path = "src/main.rs"
